Fix site background z-index

--- a/theme/styles/parts/site-background.styl
+++ b/theme/styles/parts/site-background.styl
@@ -1,6 +1,7 @@
 .site-background
 	fixed top 0 right 0 bottom 0 left 0
 	opacity 0.1
+	z-index -1
 
 	&-img
 		object-fit cover
